--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aether-//-design-portfolio",
+  "name": "skdnsh-tech-site",
   "private": true,
   "version": "0.0.0",
   "type": "module",
