--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "three": "^0.181.2"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@types/mdx": "^2.0.13",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.22",
     "glob": "^13.0.0",
     "gray-matter": "^4.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "tsx": "^4.20.6",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
